hoo hoo and woo woo

--- a/examples/index.html
+++ b/examples/index.html
@@ -1,8 +1,7 @@
 <body>
-  PERFECT BODY
-</body>
+  <h1>Examples of <a href="https://github.com/FMS-Cat/glcat-ts">glcat-ts</a></h1>
 
-<script src="../dist/glcat.ts"></script>
-<script>
-  console.log( 'h, hi' );
-</script>
+  <p>
+    <a href="./quad.html">quad</a> : Simply draws a quad
+  </p>
+</body>
