add plane example + tidy up examples

--- a/examples/index.html
+++ b/examples/index.html
@@ -2,6 +2,10 @@
   <h1>Examples of <a href="https://github.com/FMS-Cat/glcat-ts">glcat-ts</a></h1>
 
   <p>
-    <a href="./quad.html">quad</a> : Simply draws a quad
+    <a href="./quad.html">quad</a> : Simply draws a quad<br />
+    <a href="./plane.html">plane</a> : Spinning plane<br />
+    <a href="./parallel_shader_compile.html">parallel_shader_compile</a> : Compile a shader asynchronously<br />
+    <a href="./webgl2.html">webgl2</a> : Try WebGL2<br />
+    <a href="./webgl2_vao.html">webgl2_vao</a> : Plane using VAO<br />
   </p>
 </body>
