--- a/examples/index.html
+++ b/examples/index.html
@@ -5,6 +5,7 @@
     <a href="./quad.html">quad</a> : Simply draws a quad<br />
     <a href="./plane.html">plane</a> : Spinning plane<br />
     <a href="./parallel_shader_compile.html">parallel_shader_compile</a> : Compile a shader asynchronously<br />
+    <a href="./instancing.html">instancing</a> : Draw a lot of cube using instancing<br />
     <a href="./webgl2.html">webgl2</a> : Try WebGL2<br />
     <a href="./webgl2_vao.html">webgl2_vao</a> : Plane using VAO<br />
   </p>
