improve mrt wrapper + add mrt example

--- a/examples/index.html
+++ b/examples/index.html
@@ -8,5 +8,6 @@
     <a href="./instancing.html">instancing</a> : Draw a lot of cube using instancing<br />
     <a href="./webgl2.html">webgl2</a> : Try WebGL2<br />
     <a href="./webgl2_vao.html">webgl2_vao</a> : Plane using VAO<br />
+    <a href="./webgl2_mrt.html">webgl2_mrt</a> : Multiple render target<br />
   </p>
 </body>
