--- a/examples/quad.html
+++ b/examples/quad.html
@@ -16,12 +16,12 @@
     'precision highp float; uniform vec3 color; void main() { gl_FragColor = vec4( color, 1.0 ); }'
   );
 
-  glCat.useProgram( program );
-
   program.attribute( 'p', vboQuad, 2 );
   program.uniform( 'color', '3f', 0.0, 0.5, 1.0 );
 
-  gl.drawArrays( gl.TRIANGLE_STRIP, 0, 4 );
+  glCat.useProgram( program, () => {
+    gl.drawArrays( gl.TRIANGLE_STRIP, 0, 4 );
+  } );
 
   vboQuad.dispose();
   program.dispose( true );
