--- a/examples/plane.html
+++ b/examples/plane.html
@@ -2,8 +2,8 @@
   <canvas id="canvas" width=1280 height=720></canvas>
 </body>
 
-<script src="../dist/glcat.js"></script>
 <script type="module">
+  import { GLCat } from '../dist/glcat.module.js';
   import {
     Matrix4,
     TRIANGLE_STRIP_QUAD_3D,
