--- a/examples/webgl2_mrt.html
+++ b/examples/webgl2_mrt.html
@@ -2,8 +2,8 @@
   <canvas id="canvas" width=1280 height=720></canvas>
 </body>
 
-<script src="../dist/glcat.js"></script>
 <script type="module">
+  import { GLCat } from '../dist/glcat.module.js';
   import {
     TRIANGLE_STRIP_QUAD,
     TRIANGLE_STRIP_QUAD_UV,
