better implementation of data texture

--- a/examples/index.html
+++ b/examples/index.html
@@ -7,6 +7,7 @@
     <a href="./parallel_shader_compile.html">parallel_shader_compile</a> : Compile a shader asynchronously<br />
     <a href="./instancing.html">instancing</a> : Draw a lot of cube using instancing<br />
     <a href="./offscreen.html">offscreen</a> : Offscreen rendering + post effect using framebuffer<br />
+    <a href="./float_data_texture.html">float_data_texture.html</a> : Use float data texture<br />
     <a href="./webgl2.html">webgl2</a> : Try WebGL2<br />
     <a href="./webgl2_vao.html">webgl2_vao</a> : Plane using VAO<br />
     <a href="./webgl2_offscreen_msaa.html">webgl2_offscreen_msaa</a> : Multisample framebuffer<br />
