--- a/examples/index.html
+++ b/examples/index.html
@@ -9,6 +9,7 @@
     <a href="./offscreen.html">offscreen</a> : Offscreen rendering + post effect using framebuffer<br />
     <a href="./float_data_texture.html">float_data_texture.html</a> : Use float data texture<br />
     <a href="./webgl2.html">webgl2</a> : Try WebGL2<br />
+    <a href="./webgl2_float_framebuffer.html">webgl2_float_framebuffer</a> : Float framebuffer in WebGL2<br />
     <a href="./webgl2_vao.html">webgl2_vao</a> : Plane using VAO<br />
     <a href="./webgl2_offscreen_msaa.html">webgl2_offscreen_msaa</a> : Multisample framebuffer<br />
     <a href="./webgl2_mrt.html">webgl2_mrt</a> : Multiple render target<br />
